[package]
name = "dynamode"
version = "0.1.1"
edition = "2024"
authors = ["Masoumeh Ebhami"]
description = "A professional, extensible ODM for AWS DynamoDB in Rust"
license = "MIT"
repository = "https://github.com/masumeebhami/dynamode"

[dependencies]
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"
aws-config = "1.6.3"
aws-sdk-dynamodb = "1.79.0"